--- a/main/res/layout/activity_count.xml
+++ b/main/res/layout/activity_count.xml
@@ -124,12 +124,12 @@
                 </LinearLayout>
 
                 <ProgressBar
-                    android:paddingTop="5dp"
                     android:id="@+id/bar"
                     style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:max="100"/>
+                    android:max="100"
+                    android:paddingTop="5dp" />
 
 
             </LinearLayout>
