--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -21,8 +21,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/search"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:textSize="25dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_margin="15dp"
+            android:textSize="23sp"
             android:textColor="#427CAC"
             android:text="Physical Inventory Documents"/>
 
@@ -31,6 +33,8 @@
             android:id="@+id/list_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/list_title" />
