--- a/main/res/layout/activity_search.xml
+++ b/main/res/layout/activity_search.xml
@@ -33,37 +33,54 @@
                         android:layout_width="match_parent"
                         android:layout_marginTop="10dp"
                         android:layout_height="match_parent">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="20dp"
-                            android:paddingRight="20dp">
-
-                            <EditText
-                                android:id="@+id/warehouse_number"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="Warehouse Number (Mandatory)"
-                                android:inputType="text"
-                                android:maxLines="1"
-                                android:singleLine="true" />
-                        </android.support.design.widget.TextInputLayout>
                         <android.support.design.widget.TextInputLayout
                             android:paddingLeft="20dp"
+                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <EditText
-                                android:id="@+id/warehouse_order"
-                                android:hint="Warehouse Order (Optional)"
+                                android:id="@+id/warehouse_number"
+                                android:hint="Warehouse Number (Mandatory)"
                                 android:imeOptions="actionUnspecified"
                                 android:maxLines="1"
                                 android:singleLine="true"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
                         </android.support.design.widget.TextInputLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="55dp"
+                            android:orientation="horizontal"
+                            android:paddingLeft="20dp"
+                            android:paddingRight="20dp">
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="5">
+                                <!--addTextChangedListener-->
+                                <EditText
+                                    android:id="@+id/warehouse_order"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="Warehouse Order (Optional)"
+                                    android:inputType="text"
+                                    android:maxLines="1"
+                                    android:singleLine="true" />
+                            </android.support.design.widget.TextInputLayout>
+
+                            <ImageView
+                                android:id="@+id/warehouse_order_barcode_scanner"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:padding="5dp"
+                                android:src="@drawable/barcode_scanner" />
+                        </LinearLayout>
                         <android.support.design.widget.TextInputLayout
                             android:paddingLeft="20dp"
+                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <EditText
@@ -77,6 +94,7 @@
                         </android.support.design.widget.TextInputLayout>
                         <android.support.design.widget.TextInputLayout
                             android:paddingLeft="20dp"
+                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <EditText
@@ -91,21 +109,23 @@
                         <LinearLayout
                             android:paddingTop="20dp"
                             android:paddingLeft="20dp"
+                            android:paddingRight="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
+
                             <TextView
-                                android:text="Count Mode"
-                                android:textSize="18sp"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="3"/>
+                                android:layout_weight="3"
+                                android:paddingLeft="5dp"
+                                android:text="Guided Mode"
+                                android:textSize="18sp" />
 
                             <Switch
                                 android:id="@+id/guided_mode"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="2"
-                                android:text="Guided Mode" />
+                                android:layout_weight="2"/>
                         </LinearLayout>
                     </LinearLayout>
                 <Button
@@ -119,7 +139,6 @@
                     android:layout_marginBottom="70dp"
                     android:text="Search"
                     android:textSize="18sp"
-
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
