--- a/main/res/layout/activity_wolist.xml
+++ b/main/res/layout/activity_wolist.xml
@@ -36,32 +36,34 @@
                 android:id="@+id/wo_list_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:textSize="25dp"
                 android:layout_margin="15dp"
-                android:textColor="@color/bluelight"
-                android:text="Warehouse Orders(0)"/>
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="Warehouse Orders (0)"
+                android:textColor="#427CAC"
+                android:textSize="23sp" />
 
             <ListView
                 android:id="@+id/second_listView"
-                android:background="#1000"
-                android:layout_margin="15dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp" />
         </LinearLayout>
         <Button
             android:id="@+id/save_unsaved_wo"
-            android:visibility="invisible"
+            android:visibility="gone"
+            android:textColorHighlight="@color/white"
             android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="#427CAC"
-            android:textAllCaps="false"
+            android:background="@drawable/logon_btn"
+            android:layout_marginLeft="@dimen/button_margin_horizontal"
+            android:layout_marginRight="@dimen/button_margin_horizontal"
+            android:layout_marginBottom="70dp"
+            android:textSize="18sp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:text="Save all" />
     </RelativeLayout>
 
