--- a/main/res/layout/nav_header.xml
+++ b/main/res/layout/nav_header.xml
@@ -1,32 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_height="180dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/colorPrimary" />
+        android:layout_height="200dp"
+        android:background="@color/main_background">
 
-    <LinearLayout
-        android:layout_marginTop="-40dp"
-        android:gravity="right"
-        android:paddingRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="80dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="XUKI"
-            android:paddingTop="20dp"
-            android:textColor="@color/white"/>
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/nav_header_img"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@mipmap/nav_header_img" />
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:src="@drawable/xuki_pic" />
 
+        <TextView
+            android:id="@+id/nav_header_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nav_header_img"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="XUKI"
+            android:textColor="@color/white" />
+    </RelativeLayout>
+
+
+
+    <!--<LinearLayout-->
+        <!--android:layout_marginTop="-40dp"-->
+        <!--android:gravity="right"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="80dp">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="XUKI"-->
+            <!--android:paddingTop="20dp"-->
+            <!--android:textColor="@color/white"/>-->
+        <!--<de.hdodenhof.circleimageview.CircleImageView-->
+            <!--android:id="@+id/nav_header_img"-->
+            <!--android:layout_width="80dp"-->
+            <!--android:layout_height="80dp"-->
+            <!--android:src="@drawable/xuki_pic" />-->
+    <!--</LinearLayout>-->
 
 </LinearLayout>
