--- a/main/res/layout/pidoclist_item.xml
+++ b/main/res/layout/pidoclist_item.xml
@@ -1,8 +1,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:padding="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -22,7 +21,7 @@
             android:textSize="30sp"
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/grey"
             android:textAllCaps="false"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
