--- a/main/res/layout/wolist_item.xml
+++ b/main/res/layout/wolist_item.xml
@@ -2,14 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:orientation="vertical"
-        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
-            android:textColor="@android:color/holo_red_light"
+            android:textColor="@android:color/darker_gray"
             android:id="@+id/bin_number"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:textSize="@dimen/list_view_text_size"
+            android:padding="10dp"
+            android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
