--- a/main/res/layout/activity_search.xml
+++ b/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.v4.widget.DrawerLayout
         xmlns:app = "http://schemas.android.com/apk/res-auto"
@@ -50,7 +50,7 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="55dp"
+                            android:layout_height="65dp"
                             android:orientation="horizontal"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp">
@@ -113,19 +113,18 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="3"
-                                android:paddingLeft="5dp"
-                                android:text="Guided Mode"
-                                android:textSize="18sp" />
-
                             <Switch
                                 android:id="@+id/guided_mode"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="2"/>
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingBottom="12dp"
+                                android:paddingLeft="5dp"
+                                android:paddingRight="16dp"
+                                android:paddingTop="12dp"
+                                android:switchTextAppearance="@style/TextAppearance.AppCompat"
+                                android:text="Guided Mode"
+                                android:textColorLink="#427CAC"
+                                android:textStyle="normal" />
                         </LinearLayout>
                     </LinearLayout>
                 <Button
