--- a/main/res/layout/initial_logon.xml
+++ b/main/res/layout/initial_logon.xml
@@ -109,13 +109,13 @@
                                 android:layout_weight="1"
                                 android:textSize="20sp"
                                 android:layout_height="wrap_content" />
+
                             <Spinner
                                 android:id="@+id/server_list"
-                                android:layout_gravity="center"
                                 android:layout_width="0dp"
-                                android:layout_weight="2"
-                                android:layout_height="wrap_content">
-                            </Spinner>
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_weight="2" />
                         </LinearLayout>
                     </LinearLayout>
                     <LinearLayout
